<resources>
    <string name="app_name">SeaSalonApp</string>
    <string name="tv_create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="email_hint">Masukan email anda</string>
    <string name="name">Name</string>
    <string name="hint_name">Masukan nama anda</string>
    <string name="hint_phone_number">Masukan No Telepon Anda</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="hint_password">Masukan password anda</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="hi_welcome_back_you_ve_been_missed">Hi! Welcome back, you\'ve been missed</string>
    <string name="don_t_have_an_account_yet_please_register">Don\'t have an account yet? Please register!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reviews">Reviews</string>
    <string name="profile">Profile</string>
    <string name="open_salon">We open 9.00 a.m. until 9.00 p.m.</string>
    <string name="welcome_to_sea_salon_app">Welcome to SEA Salon App</string>
    <string name="name_dummy">Muhammad Ibra Alfathar</string>
    <string name="dummy_services">Manicure and Pedicure</string>
    <string name="duration_per_session">Duration per session</string>
    <string name="duration">60</string>
    <string name="minute">Minute</string>
    <string name="hi">Hi!</string>
    <string name="our_service">Our Service</string>
    <string name="your_name">Your Name</string>
    <string name="your_comment">Your Comment</string>
    <string name="submit">Submit</string>
    <string name="make_reservation_in_here">Make reservation in here!!</string>
    <string name="reservation">Reservation</string>
    <string name="select_a_date">Select a date</string>
    <string name="select_a_time">Select a time</string>
    <string name="select_time_start_reservation">Select time start reservation</string>
    <string name="select_time_end_reservation">Select time end reservation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="branch_salon">Branch Salon</string>
    <string name="share_your_experiences_and_help_us_get_better">Share your experiences and help us get better!</string>
</resources>