<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.main.ui.ratings.RatingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:theme="@style/RatingBar"
            android:numStars="5"
            android:stepSize="1.0" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_comment"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:listitem="@layout/item_review"
            android:orientation="vertical" />

    </LinearLayout>




</ScrollView>