<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageViewService"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="@id/imageViewService"
            android:text="@string/dummy_services"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewService"/>

        <TextView
            android:id="@+id/tv_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_per_session"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tv_services"
            app:layout_constraintStart_toStartOf="@id/tv_services"/>

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/duration"
            app:layout_constraintTop_toBottomOf="@id/tv_session"
            app:layout_constraintStart_toStartOf="@id/tv_session"/>

        <TextView
            android:id="@+id/tv_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="15sp"
            android:text="@string/minute"
            app:layout_constraintStart_toEndOf="@id/tv_duration"
            app:layout_constraintTop_toTopOf="@id/tv_duration"
            app:layout_constraintBottom_toBottomOf="@id/tv_duration"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>