<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="316dp"
            android:layout_height="252dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/login_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welc" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:layout_marginTop="50dp"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/hi_welcome_back_you_ve_been_missed"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_register"
            app:layout_constraintTop_toBottomOf="@id/tv_register"
            app:layout_constraintEnd_toEndOf="@+id/tv_register" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/te_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            android:hint="@string/email_hint"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="#39447d"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/input_email" />
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/te_email"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/te_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="#39447d"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_medium"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/input_password" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="289dp"
            android:layout_height="52dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="#39447d"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/te_password" />


        <TextView
            android:id="@+id/tv_register_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:text="@string/don_t_have_an_account_yet_please_register"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:onClick="navigateToRegister"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>